--- a/OOP_SOLID.Tests/OOP_SOLID.Tests.csproj
+++ b/OOP_SOLID.Tests/OOP_SOLID.Tests.csproj
@@ -21,4 +21,9 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="OOP\Inheritance\" />
+  </ItemGroup>
+
 </Project>
